.metadata/.plugins/org.eclipse.cdt.ui/MemorySystem.build.log
20:10:38 **** Incremental Build of configuration Default for project MemorySystem ****
make all 
g++ -c -g memorysystem.cpp
memorysystem.cpp: In function ‘int SearchTLB(int, int*, tlb_t*, bool*)’:
memorysystem.cpp:173:13: error: ‘struct tlb_t’ has no member named ‘list’
    if (tlb->list[i]->page_num == page_num) {
             ^
memorysystem.cpp:175:23: error: ‘struct tlb_t’ has no member named ‘list’
     *frame_num = tlb->list[i]->frame_num;
                       ^
make: *** [memorysystem.o] Error 1

20:10:38 Build Finished (took 127ms)

